Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-484

Spelling error s/excute/execute

Agile BoardAttach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.11.0
    • Appender
    • None
    • Patch

    Description

      Spelling error in src/main/cpp/odbcappender.cpp

      Patch:
      Description: Patch for fixing spelling errors in the binary

      • s/excute/execute
        Author: Tobias Frost <tobi@debian.org>
        Last-Update: 2016-10-23

        This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
          • a/src/main/cpp/odbcappender.cpp
            +++ b/src/main/cpp/odbcappender.cpp
            @@ -306,7 +306,7 @@
            }
            catch (SQLException& e) { - errorHandler->error(LOG4CXX_STR("Failed to excute sql"), e, + errorHandler->error(LOG4CXX_STR("Failed to execute sql"), e, ErrorCode::FLUSH_FAILURE); }

            }

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tschoening Thorsten Schöning
            coldtobi Tobias Frost
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment