LOGCXX-484: Spelling error s/excute/execute