src/main/cpp/odbcappender.cpp
@@ -39,18 +39,18 @@ using namespace log4cxx::helpers;
 using namespace log4cxx::db;
 using namespace log4cxx::spi;
 
-SQLException::SQLException(short fHandleType, 
+SQLException::SQLException(short fHandleType,
                            void* hInput, const char* prolog,
-                           log4cxx::helpers::Pool& p) 
+                           log4cxx::helpers::Pool& p)
                            : Exception(formatMessage(fHandleType, hInput, prolog, p)) {
 }
 
 
-SQLException::SQLException(const char* msg) 
+SQLException::SQLException(const char* msg)
    : Exception(msg) {
 }
 
-SQLException::SQLException(const SQLException& src) 
+SQLException::SQLException(const SQLException& src)
    : Exception(src) {
 }
 
@@ -69,7 +69,7 @@ const char* SQLException::formatMessage(short fHandleType,
    // Get the status records.
    i = 1;
    while ((rc2 = SQLGetDiagRecA(fHandleType, hInput, i, SqlState, &NativeError,
-                        Msg, sizeof(Msg), &MsgLen)) != SQL_NO_DATA) 
+                        Msg, sizeof(Msg), &MsgLen)) != SQL_NO_DATA)
    {
       strReturn.append((char*) Msg);
       i++;
@@ -140,7 +140,7 @@ void ODBCAppender::append(const spi::LoggingEventPtr& event, log4cxx::helpers::P
 
    if (buffer.size() >= bufferSize)
       flushBuffer(p);
-#endif      
+#endif
 }
 
 LogString ODBCAppender::getLogStatement(const spi::LoggingEventPtr& event, log4cxx::helpers::Pool& p) const
@@ -168,7 +168,7 @@ void ODBCAppender::execute(const LogString& sql, log4cxx::helpers::Pool& p)
       }
 
       SQLWCHAR* wsql;
-      encode(&wsql, sql, p); 
+      encode(&wsql, sql, p);
       ret = SQLExecDirectW(stmt, wsql, SQL_NTS);
 
      if (ret < 0)
@@ -182,7 +182,7 @@ void ODBCAppender::execute(const LogString& sql, log4cxx::helpers::Pool& p)
       {
          SQLFreeHandle(SQL_HANDLE_STMT, stmt);
       }
-   
+
       throw;
    }
    SQLFreeHandle(SQL_HANDLE_STMT, stmt);
@@ -243,8 +243,8 @@ ODBCAppender::SQLHDBC ODBCAppender::getConnection(log4cxx::helpers::Pool& p)
      encode(&wUser, databaseUser, p);
      encode(&wPwd, databasePassword, p);
 
-     ret = SQLConnectW( connection, 
-            wURL, SQL_NTS, 
+     ret = SQLConnectW( connection,
+            wURL, SQL_NTS,
             wUser, SQL_NTS,
             wPwd, SQL_NTS);
 
@@ -261,7 +261,7 @@ ODBCAppender::SQLHDBC ODBCAppender::getConnection(log4cxx::helpers::Pool& p)
    return connection;
 #else
    return 0;
-#endif   
+#endif
 }
 
 void ODBCAppender::close()
@@ -307,7 +307,7 @@ void ODBCAppender::flushBuffer(Pool& p)
       }
       catch (SQLException& e)
       {
-         errorHandler->error(LOG4CXX_STR("Failed to excute sql"), e,
+         errorHandler->error(LOG4CXX_STR("Failed to execute sql"), e,
             ErrorCode::FLUSH_FAILURE);
       }
    }
@@ -337,10 +337,10 @@ void ODBCAppender::encode(wchar_t** dest, const LogString& src, Pool& p) {
    *dest = Transcoder::wencode(src, p);
 }
 
-void ODBCAppender::encode(unsigned short** dest, 
+void ODBCAppender::encode(unsigned short** dest,
     const LogString& src, Pool& p) {
    //  worst case double number of characters from UTF-8 or wchar_t
-   *dest = (unsigned short*) 
+   *dest = (unsigned short*)
         p.palloc((src.size() + 1) * 2 * sizeof(unsigned short));
    unsigned short* current = *dest;
    for(LogString::const_iterator i = src.begin();
